# Python_Template

./: .gitignore  README.md  component.md  mypy.ini  pull_request_template.md  pyproject.toml  requirements.txt  ruff.toml  test_example.py
.circleci/: config.yml
components/: logger.py  notifier.py
src/: calculator.py  logger.py  notifier.py
tests/: test_calculator.py  test_end_to_end.py  test_integration.py  test_logger.py  test_notifier.py
