[project]
name = "python-template"
version = "0.1.0"
description = "Python project template with linting, type checking, and testing."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff"
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html"
testpaths = ["tests"]